@@ -8,6 +8,10 @@ cdebconf (0.81) UNRELEASED; urgency=low
       box (closes: #257969).
     - Document <Tab>, <Space>, and <Enter> in a help line for the newt
       frontend (closes: #247233).
+    - Do much less work in the frontend's SIGCHLD handler; instead, just
+      tell confmodule_communicate() to return at the next opportunity. This
+      is only a quick patch to sort out hangs with Linux 2.6.12 on (at
+      least) amd64, and cdebconf's signal handling needs a total revamp.
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 27 Jun 2005 23:07:42 +0100
 
